Gray-Space/src/objects/GS_Club_Member__c.object
<CustomObject>
    <fields>
        <fullName>GS_Club__c</fullName>
        <label>Club</label>
        <referenceTo>GS_Club__c</referenceTo>
        <relationshipLabel>Club Members</relationshipLabel>
        <relationshipName>Club_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GS_Interest_In__c</fullName>
        <label>Interest In</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GS_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Club Members</relationshipLabel>
        <relationshipName>Club_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Club Member</label>
    <nameField>
        <displayFormat>CM-{00000000}</displayFormat>
        <label>Club Memeber Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Club Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>